--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,10 +6,18 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
-      <th>Rating</th>
-      <th>Release Date</th>
-      <th>More Info</th>
+      <th>
+        <%= link_to "Movie Title", movies_path(@sorting_hash["title"]), :id => 'title_header' %>
+      </th>
+      <th>
+        <%= link_to "Rating", movies_path(@sorting_hash["rating"]), :id => 'rating_header' %>
+      </th>
+      <th>
+        <%= link_to "Release Date", movies_path(@sorting_hash["release_date"]), :id => 'release_date_header' %>
+      </th>
+      <th>
+        <%= link_to "More Info", movies_path(@sorting_hash["title"]), :id => 'more_info_header' %>
+      </th>
     </tr>
   </thead>
   <tbody>
